--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Klimabilanzierung: Zahnarztpraxis / Dentallabor</h1>
+  <header class="header">
+    <img src="/label.png?v=1" alt="Klimaneutral-Label" class="label-img" />
+    <h1>Klimabilanzierung: Zahnarztpraxis / Dentallabor</h1>
+  </header>
+
   <form>
-    <label>Praxisname: <input type="text" name="praxisname" /></label><br />
-    <label>Stromverbrauch (kWh/Jahr): <input type="number" name="strom" /></label><br />
-    <label>Dieselverbrauch (km/Jahr): <input type="number" name="km_diesel" /></label><br />
-    <label>Anzahl Behandlungseinheiten: <input type="number" name="behandlungseinheiten" /></label><br />
-    <label>Davon Cloud-angebunden: <input type="number" name="behandlung_cloud" /></label><br />
-    <label>Anzahl Sterilisatoren etc.: <input type="number" name="steri" /></label><br />
-    <label>Davon Cloud-angebunden: <input type="number" name="steri_cloud" /></label><br />
-    <label>Erforderliche Wartungen: <input type="number" name="wartungen_erforderlich" /></label><br />
-    <label>Tatsächliche Wartungen: <input type="number" name="wartungen_real" /></label><br />
-    <label>Gesparte Anfahrten durch Bündelung: <input type="number" name="anfahrten_gespart" /></label><br />
-    <label>Service-Fahrtstrecke (hin & zurück in km): <input type="number" name="km_service" /></label><br />
+    <label>Praxisname: <input type="text" name="praxisname" /></label>
+    <label>Stromverbrauch (kWh/Jahr): <input type="number" name="strom" /></label>
+    <label>Dieselverbrauch (km/Jahr): <input type="number" name="km_diesel" /></label>
+    <label>Anzahl Behandlungseinheiten: <input type="number" name="behandlungseinheiten" /></label>
+    <label>Davon Cloud-angebunden: <input type="number" name="behandlung_cloud" /></label>
+    <label>Anzahl Sterilisatoren etc.: <input type="number" name="steri" /></label>
+    <label>Davon Cloud-angebunden: <input type="number" name="steri_cloud" /></label>
+    <label>Erforderliche Wartungen: <input type="number" name="wartungen_erforderlich" /></label>
+    <label>Tatsächliche Wartungen: <input type="number" name="wartungen_real" /></label>
+    <label>Gesparte Anfahrten durch Bündelung: <input type="number" name="anfahrten_gespart" /></label>
+    <label>Service-Fahrtstrecke (hin & zurück in km): <input type="number" name="km_service" /></label>
     <button type="submit">Berechnen</button>
   </form>
-  <p>PDF-Export in Arbeit.</p>
+
+  <p class="muted">PDF-Export in Arbeit.</p>
   <script src="app.js"></script>
 </body>
 </html>
