--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <img src="/label.png?v=1" alt="Klimaneutral-Label" class="label-img" />
-    <h1>Klimabilanzierung: Zahnarztpraxis / Dentallabor</h1>
+    <h1>Klimabilanzierung: Zahnarztpraxis und Dentallabor</h1>
   </header>
 
   <form>
