--- a/index.html
+++ b/index.html
@@ -2,32 +2,426 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>dentalCO2-JPConvent – Vollversion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>dentalCO2-JPConvent – Klimabilanz (Layout-Test)</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Header mit Label -->
   <header class="header">
     <img src="/label.png?v=1" alt="Klimaneutral-Label" class="label-img" />
     <h1>Klimabilanzierung: Zahnarztpraxis / Dentallabor</h1>
   </header>
 
-  <form>
-    <label>Praxisname: <input type="text" name="praxisname" /></label>
-    <label>Stromverbrauch (kWh/Jahr): <input type="number" name="strom" /></label>
-    <label>Dieselverbrauch (km/Jahr): <input type="number" name="km_diesel" /></label>
-    <label>Anzahl Behandlungseinheiten: <input type="number" name="behandlungseinheiten" /></label>
-    <label>Davon Cloud-angebunden: <input type="number" name="behandlung_cloud" /></label>
-    <label>Anzahl Sterilisatoren etc.: <input type="number" name="steri" /></label>
-    <label>Davon Cloud-angebunden: <input type="number" name="steri_cloud" /></label>
-    <label>Erforderliche Wartungen: <input type="number" name="wartungen_erforderlich" /></label>
-    <label>Tatsächliche Wartungen: <input type="number" name="wartungen_real" /></label>
-    <label>Gesparte Anfahrten durch Bündelung: <input type="number" name="anfahrten_gespart" /></label>
-    <label>Service-Fahrtstrecke (hin & zurück in km): <input type="number" name="km_service" /></label>
-    <button type="submit">Berechnen</button>
-  </form>
+  <!-- Stammdaten -->
+  <section class="card">
+    <h2 class="section-title">Stammdaten</h2>
+    <div class="grid">
+      <label>Datum Erstvalidierung Klimaneutral
+        <input type="date" name="erstvalidierung" />
+      </label>
+      <label>Datum Revalidierung Klimaneutral
+        <input type="date" name="revalidierung" />
+      </label>
+      <label>Name des Unternehmens
+        <input type="text" name="unternehmen" />
+      </label>
+      <label>Name der Praxis
+        <input type="text" name="praxis" />
+      </label>
+      <label>Name auf dem Klimalabel
+        <input type="text" name="labelname" />
+      </label>
+      <label>Straße / Nr.
+        <input type="text" name="strasse" />
+      </label>
+      <label>PLZ / Ort
+        <input type="text" name="plzort" />
+      </label>
+      <label>Anzahl Mitarbeitende (inkl. GF)
+        <input type="number" min="0" name="mitarbeiter" />
+      </label>
+      <label>Anzahl Behandlungsplätze
+        <input type="number" min="0" name="behandlungsplaetze" />
+      </label>
+      <label>Eigenlabor vorhanden
+        <select name="eigenlabor">
+          <option>Nein</option><option>Ja</option>
+        </select>
+      </label>
+      <label>Fremdlabor (Fahrer)
+        <select name="fremdlabor_fahrer">
+          <option>Nein</option><option>Ja</option>
+        </select>
+      </label>
+      <label>Fremdlabor (online/cloud)
+        <select name="fremdlabor_cloud">
+          <option>Nein</option><option>Ja</option>
+        </select>
+      </label>
+    </div>
 
-  <p class="muted">PDF-Export in Arbeit.</p>
+    <div class="divider"></div>
+
+    <div class="grid">
+      <label>QM vorhanden
+        <select name="qm"><option>Nein</option><option>Ja</option></select>
+      </label>
+      <label>Hygienebeauftragte*r
+        <select name="hygiene"><option>Nein</option><option>Ja</option></select>
+      </label>
+      <label>Arbeitsschutzbeauftragte*r
+        <select name="arbeitsschutz"><option>Nein</option><option>Ja</option></select>
+      </label>
+      <label>DSGVO-/Datenschutzbeauftragte*r
+        <select name="dsgvo"><option>Nein</option><option>Ja</option></select>
+      </label>
+      <label>KI-Beauftragte*r
+        <select name="ki_beauftragte"><option>Nein</option><option>Ja</option></select>
+      </label>
+    </div>
+  </section>
+
+  <!-- SCOPE 1 -->
+  <section class="scope">
+    <div class="scope-header scope1">Scope 1 – Direkte Emissionen</div>
+    <div class="card">
+      <h3 class="section-subtitle">Fuhrpark (Praxisfahrzeuge)</h3>
+      <div class="grid">
+        <label>Anzahl Firmen-Kfz
+          <input type="number" min="0" name="anz_kfz" />
+        </label>
+        <label>Diesel (Anteil Fahrzeuge)
+          <input type="number" min="0" name="kfz_diesel" />
+        </label>
+        <label>Benzin (Anteil Fahrzeuge)
+          <input type="number" min="0" name="kfz_benzin" />
+        </label>
+        <label>Strom (Anteil Fahrzeuge)
+          <input type="number" min="0" name="kfz_strom" />
+        </label>
+        <label>H₂ (Anteil Fahrzeuge)
+          <input type="number" min="0" name="kfz_h2" />
+        </label>
+        <label>Ø Gesamtkilometer/Jahr
+          <input type="number" min="0" name="kfz_km_gesamt" />
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Heizung (eigene Erzeugung)</h3>
+      <div class="grid">
+        <label>Heizsystem
+          <select name="heizung_typ">
+            <option>Keine Angabe</option>
+            <option>Öl</option>
+            <option>Gas</option>
+            <option>Holzvergaser</option>
+            <option>Erd-Wärmepumpe</option>
+            <option>Luft-Wärmepumpe</option>
+            <option>Fernwärme</option>
+            <option>Sonstiges</option>
+          </select>
+        </label>
+        <label>Baujahr Heizungsanlage
+          <input type="number" min="1900" max="2100" name="heizung_baujahr" />
+        </label>
+        <label>Heizwärmebedarf (kWh/m²·a)
+          <input type="number" min="0" name="heizwaermebedarf" />
+        </label>
+      </div>
+    </div>
+  </section>
+
+  <!-- SCOPE 2 -->
+  <section class="scope">
+    <div class="scope-header scope2">Scope 2 – Eingekaufte Energie</div>
+    <div class="card">
+      <h3 class="section-subtitle">Strom & Gebäude</h3>
+      <div class="grid">
+        <label>Stromverbrauch gesamt (kWh/Jahr)
+          <input type="number" min="0" name="strom_jahr" />
+        </label>
+        <label>Ökostrom-Anteil (%)
+          <input type="number" min="0" max="100" name="oekostrom" />
+        </label>
+        <label>Stromanbieter
+          <input type="text" name="stromanbieter" />
+        </label>
+        <label>Eigene PV (öffentlich) in kWp
+          <input type="number" min="0" name="pv" />
+        </label>
+        <label>Balkonkraftwerk (kWp)
+          <input type="number" min="0" name="balkon_pv" />
+        </label>
+        <label>Insel-PV (kWp)
+          <input type="number" min="0" name="insel_pv" />
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Gebäude-Effizienz</h3>
+      <div class="grid">
+        <label>Energieausweis vorhanden
+          <select name="energieausweis"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Energieeffizienzklasse
+          <input type="text" name="effizienzklasse" placeholder="z. B. A+, B, C" />
+        </label>
+        <label>Passivhaus
+          <select name="passivhaus"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Nullenergiehaus
+          <select name="nullenergie"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Energie-Plus-Haus
+          <select name="plus_haus"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Energieautarkes Haus
+          <select name="autark_haus"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Niedrigenergiehaus
+          <select name="niedrigenergie"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>3-Liter-Haus
+          <select name="drei_liter"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Klimaanlage vorhanden
+          <select name="klimaanlage"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Kälteverbrauch (kWh/Jahr)
+          <input type="number" min="0" name="kaelte" />
+        </label>
+        <label>Luftumwälzung vorhanden
+          <select name="luftumwaelzung"><option>Nein</option><option>Ja</option></select>
+        </label>
+      </div>
+    </div>
+  </section>
+
+  <!-- SCOPE 3 -->
+  <section class="scope">
+    <div class="scope-header scope3">Scope 3 – Sonstige indirekte Emissionen</div>
+    <div class="card">
+      <h3 class="section-subtitle">Digitale Prozesse & IT</h3>
+      <div class="grid">
+        <label>Anzahl PC-Arbeitsplätze
+          <input type="number" min="0" name="pcs" />
+        </label>
+        <label>Alter PC/IT-Anlage (Ø Jahre)
+          <input type="number" min="0" name="it_alter" />
+        </label>
+        <label>Anzahl Monitore
+          <input type="number" min="0" name="monitore" />
+        </label>
+        <label>Anzahl Notebooks
+          <input type="number" min="0" name="notebooks" />
+        </label>
+        <label>Anzahl Tablets
+          <input type="number" min="0" name="tablets" />
+        </label>
+        <label>Anzahl Handys
+          <input type="number" min="0" name="handys" />
+        </label>
+        <label>Ø Alter Mobilgeräte (Jahre)
+          <input type="number" min="0" name="mobile_alter" />
+        </label>
+        <label>Telefonie
+          <select name="telefonie">
+            <option>Stationäre Anlage</option>
+            <option>Cloud-Telefonie</option>
+          </select>
+        </label>
+        <label>Internet
+          <select name="internet">
+            <option>Kupfer/DSL</option>
+            <option>Glasfaser (FTTH)</option>
+            <option>Mobil (LTE/5G)</option>
+          </select>
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Cloud-Service & Technischer Support</h3>
+      <div class="grid">
+        <label>Anzahl Behandlungseinheiten
+          <input type="number" min="0" name="beh_einheiten" />
+        </label>
+        <label>Davon Cloudanbindung
+          <input type="number" min="0" name="beh_cloud" />
+        </label>
+        <label>Steri/Thermodesinf./Reinigungsgeräte (Anzahl)
+          <input type="number" min="0" name="steri" />
+        </label>
+        <label>Davon Cloudanbindung
+          <input type="number" min="0" name="steri_cloud" />
+        </label>
+        <label>Erforderliche Wartungen (p. a.)
+          <input type="number" min="0" name="wartung_soll" />
+        </label>
+        <label>Tatsächliche Wartungen (p. a.)
+          <input type="number" min="0" name="wartung_ist" />
+        </label>
+        <label>Durch Bündelung gesparte Anfahrten (p. a.)
+          <input type="number" min="0" name="anfahrten_gespart" />
+        </label>
+        <label>Service-Fahrtstrecke (hin & zurück, km)
+          <input type="number" min="0" name="service_km_hz" />
+        </label>
+        <label>Cloud-Service genutzt?
+          <select name="cloud_genutzt">
+            <option>Nein</option>
+            <option>Ja – pauschal</option>
+            <option>Ja – volumenbasiert</option>
+          </select>
+        </label>
+        <label>Cloud-Datenvolumen (GB/Monat, falls volumenbasiert)
+          <input type="number" min="0" name="cloud_gb" />
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Abrechnung, Bestellungen, KI</h3>
+      <div class="grid">
+        <label>Abrechnungsservice vor Ort
+          <select name="abrechnung_vorort"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Abrechnungsservice extern
+          <select name="abrechnung_extern"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Davon online (%)
+          <input type="number" min="0" max="100" name="abrechnung_online_pct" />
+        </label>
+        <label>E-Rechnung möglich
+          <select name="erechnung"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Rechnungen per Post (Anz./Monat)
+          <input type="number" min="0" name="rechnungen_post" />
+        </label>
+        <label>Digitale Belegerfassung
+          <select name="belegerfassung"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>KI-Terminvergabe
+          <select name="ki_termin"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>KI-Röntgen
+          <select name="ki_roentgen"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>KI-Sterilisation
+          <select name="ki_steri"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Abformfreie Praxis (% Fälle)
+          <input type="number" min="0" max="100" name="abformfrei_pct" />
+        </label>
+        <label>Online-Bestellprogramm
+          <select name="bestellprogramm"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Cloud-Anbindung technischer Service
+          <select name="cloud_service"><option>Nein</option><option>Ja</option></select>
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Wasser & Ressourcen</h3>
+      <div class="grid">
+        <label>Wasserverbrauch (Liter/Jahr)
+          <input type="number" min="0" name="wasser" />
+        </label>
+        <label>Solarthermie
+          <select name="solarthermie"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Eigener Brunnen
+          <select name="brunnen"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Grauwasser-Aufbereitung
+          <select name="grauwasser"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Regenwassernutzung
+          <select name="regenwasser"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Abfall getrennt entsorgt
+          <select name="abfall_trennung"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Recycling Betriebsabfälle (fachgerecht)
+          <select name="recycling"><option>Nein</option><option>Ja</option></select>
+        </label>
+        <label>Komposttoilette ohne H₂O
+          <select name="kompost"><option>Nein</option><option>Ja</option></select>
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Mobilität – Pendeln & Geschäft</h3>
+      <div class="grid">
+        <label>Pendeln Kfz (km/Jahr, gesamt)
+          <input type="number" min="0" name="pendel_kfz" />
+        </label>
+        <label>Pendeln E-Mobility (km/Jahr, gesamt)
+          <input type="number" min="0" name="pendel_emob" />
+        </label>
+        <label>Pendeln Motorrad (km/Jahr)
+          <input type="number" min="0" name="pendel_motorrad" />
+        </label>
+        <label>Pendeln Öffentlich (km/Jahr)
+          <input type="number" min="0" name="pendel_oev" />
+        </label>
+        <label>Pendeln Fahrrad (km/Jahr)
+          <input type="number" min="0" name="pendel_rad" />
+        </label>
+        <label>Pendeln E-Bike (km/Jahr)
+          <input type="number" min="0" name="pendel_ebike" />
+        </label>
+        <label>Geschäftsverkehr Kfz (Fahrten/Woche)
+          <input type="number" min="0" name="geschaeft_kfz" />
+        </label>
+        <label>Geschäftsverkehr E-Kfz (Fahrten/Woche)
+          <input type="number" min="0" name="geschaeft_ekfz" />
+        </label>
+        <label>Geschäftsverkehr H₂-Kfz (Fahrten/Woche)
+          <input type="number" min="0" name="geschaeft_h2" />
+        </label>
+        <label>Unterkunft ISO 14001/GreenSign (Nächte/Woche)
+          <input type="number" min="0" name="hotel_iso" />
+        </label>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="section-subtitle">Material, Lieferanten, Papier</h3>
+      <div class="grid">
+        <label>Verbrauchsmaterial Biokompatibilität (%)
+          <input type="number" min="0" max="100" name="bio_pct" />
+        </label>
+        <label>Lieferanten gesamt
+          <input type="number" min="0" name="lieferanten" />
+        </label>
+        <label>Davon klimaneutral
+          <input type="number" min="0" name="lieferanten_cn" />
+        </label>
+        <label>Papierlose Kommunikation (%)
+          <input type="number" min="0" max="100" name="papierlos_pct" />
+        </label>
+        <label>Drucksachen (Blatt/Jahr)
+          <input type="number" min="0" name="druck_blatt" />
+        </label>
+        <label>Werbegeschenke / Give-Aways
+          <input type="text" name="giveaways" />
+        </label>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <button type="button" class="btn-primary">Layout getestet – Weiter zur Berechnung (später)</button>
+    <p class="muted">Hinweis: Dies ist ein Layout-Test ohne Berechnung. PDF-Export folgt.</p>
+  </footer>
+
   <script src="app.js"></script>
 </body>
 </html>
